[metadata]
license_file = LICENSE
name = getrmqapi-sdn
version = 0.0.3
author = Sidon Duarte and individual contributors
author_email = sidoncd@gmail.com
description = Get RabbitMQ messages from a specific queue to a file.
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Source =  https://github.com/Sidon/get-rabbitmq-messages
    Bug Tracker = https://github.com/Sidon/get-rabbitmq-messages/issues
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    getrmqapi
    getrmqapi.commands

python_requires = >=3.6
install_requires=
    requests >= 2.20

[options.entry_points]
getrmqapi.registered_commands =
    hello = getrmqapi.commands.hello.main

console_scripts =
    getrmqapi = getrmqapi.get_messages:main
