[metadata]
license_file = LICENSE
name = rabbitgetapi-sdn
version = 0.0.4
author = Sidon Duarte and individual contributors
author_email = sidoncd@gmail.com
description = Get RabbitMQ messages from a specific queue to a file.
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Source =  https://github.com/Sidon/get-rabbitmq-messages
    Bug Tracker = https://github.com/Sidon/get-rabbitmq-messages/issues
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    rabbitgetapi
    rabbitgetapi.commands

python_requires = >=3.6
install_requires=
    requests >= 2.20
    importlib_metadata >= 3.6
    colorama >= 0.4.3

include_package_data = True

[options.entry_points]
rabbitgetapi.registered_commands =
    getqueue = rabbitgetapi.commands.get_queue:main

console_scripts =
    rabbitgetapi = rabbitgetapi.__main__:main
